--- a/css/omens-stylesheet-v3.css
+++ b/css/omens-stylesheet-v3.css
@@ -5095,6 +5095,22 @@ fieldset.search.active-topics legend {
   font-family: RPGAwesome;
 }
 
+#thread-post .user-name .name.groupid-19::before {
+  content: "\E111";
+  font-family: "game-icons";
+  margin-top: 10px;
+}
+
+#thread-post .user-name .name.groupid-20::before {
+  font-family: "game-icons" !important;
+  content: "\E157" !important;
+}
+
+#thread-post.authorid-126 .name:before {
+  font-family: "game-icons" !important;
+  content: "\E157" !important;
+}
+
 #thread-post .user-name #groupdeco {
   position: absolute;
   width: 280px;
