Comment omens-member styling

--- a/css/omens-stylesheet-v3.css
+++ b/css/omens-stylesheet-v3.css
@@ -4358,7 +4358,7 @@ header input[type="radio"]:checked+label {
 }
 
 .omens-member {
-  position: relative;
+/*  position: relative;
   width: 100%;
   height: 300px;
   display: flex;
@@ -4366,6 +4366,7 @@ header input[type="radio"]:checked+label {
   place-items: center;
   place-content: center;
   transform: rotate(5deg);
+  */
 }
 
 .omens-member .avi {
